crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__small_inline__identity.snap
---
source: crates/nash-codegen/src/optimizer_tests/small_inline.rs
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline uplc\\n{}\\n--- core after\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let identity#2 : int -> int = \x#1 : int -> x#1 in
addInteger (identity#2 20) (identity#2 22)
--- unoptimized UPLC
(program 1.1.0
  [(lam identity_2
    [[(builtin addInteger) [identity_2 (con integer 20)]]
      [identity_2 (con integer 22)]])
    (lam x_1 x_1)])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let identity#2 : int -> int = \x#1 : int -> x#1 in
let anf#3 : int = identity#2 20 in
let anf#4 : int = identity#2 22 in
addInteger anf#3 anf#4
--- baseline uplc
(program 1.1.0
  [(lam identity_2
    [(lam anf_3
      [(lam anf_4 [[(builtin addInteger) anf_3] anf_4]) [identity_2 (con integer 22)]])
      [identity_2 (con integer 20)]])
    (lam x_1 x_1)])
--- core after
addInteger 20 22
--- optimized uplc
(program 1.1.0 [[(builtin addInteger) (con integer 20)] (con integer 22)])
--- result
(con integer 42)
--- logs
[]
