crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__small_inline__known_conditional_becomes_identity.snap
---
source: crates/nash-codegen/src/optimizer_tests/small_inline.rs
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline uplc\\n{}\\n--- core after\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let conditional#2 : int -> int = \x#1 : int -> case@Bool true of
  True -> x#1
  False -> 0 in
addInteger (conditional#2 20) (conditional#2 22)
--- unoptimized UPLC
(program 1.1.0
  [(lam conditional_2
    [[(builtin addInteger) [conditional_2 (con integer 20)]]
      [conditional_2 (con integer 22)]])
    (lam x_1 (case (con bool True) (con integer 0) x_1))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let conditional#2 : int -> int = \x#1 : int -> case@Bool true of
  True -> x#1
  False -> 0 in
let anf#3 : int = conditional#2 20 in
let anf#4 : int = conditional#2 22 in
addInteger anf#3 anf#4
--- baseline uplc
(program 1.1.0
  [(lam conditional_2
    [(lam anf_3
      [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
        [conditional_2 (con integer 22)]])
      [conditional_2 (con integer 20)]])
    (lam x_1 (case (con bool True) (con integer 0) x_1))])
--- core after
addInteger 20 22
--- optimized uplc
(program 1.1.0 [[(builtin addInteger) (con integer 20)] (con integer 22)])
--- result
(con integer 42)
--- logs
[]
