crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__small_inline__literal_64.snap
---
source: crates/nash-codegen/src/optimizer_tests/small_inline.rs
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline uplc\\n{}\\n--- core after\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let length#2 : bytes -> int = \x#1 : bytes -> lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
addInteger (length#2 (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)) (length#2 (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707))
--- unoptimized UPLC
(program 1.1.0
  [(lam length_2
    [[(builtin addInteger)
      [length_2
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]]
      [length_2
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
    (lam x_1
      [(builtin lengthOfByteString)
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)])])
--- optimized Core
let length#4 : @delay int = delay 64 in
let anf#5 : int = force length#4 in
let anf#6 : int = force length#4 in
addInteger anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam length_1
    [(lam anf_2 [(lam anf_3 [[(builtin addInteger) anf_2] anf_3]) (force length_1)])
      (force length_1)])
    (delay (con integer 64))])
--- isolated pass
--- core before
let length#2 : bytes -> int = \x#1 : bytes -> lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
let anf#3 : int = length#2 (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
let anf#4 : int = length#2 (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
addInteger anf#3 anf#4
--- baseline uplc
(program 1.1.0
  [(lam length_2
    [(lam anf_3
      [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
        [length_2
          (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
      [length_2
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
    (lam x_1
      [(builtin lengthOfByteString)
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)])])
--- core after
let anf#3 : int = lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
let anf#4 : int = lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
addInteger anf#3 anf#4
--- optimized uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
      [(builtin lengthOfByteString)
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
    [(builtin lengthOfByteString)
      (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
--- result
(con integer 128)
--- logs
[]
